@@ -5,7 +5,6 @@ package edu.colorado.phet.capacitorlab.module.multiplecapacitors;
 import java.awt.Frame;
 
 import edu.colorado.phet.capacitorlab.CLStrings;
-import edu.colorado.phet.capacitorlab.model.CLClock;
 import edu.colorado.phet.capacitorlab.model.CLModel;
 import edu.colorado.phet.capacitorlab.module.CLModule;
 
@@ -21,9 +20,9 @@ public class MultipleCapacitorsModule extends CLModule {
     private final MultipleCapacitorsControlPanel controlPanel;
 
     public MultipleCapacitorsModule( Frame parentFrame, boolean dev ) {
-        super( CLStrings.TAB_MULTIPLE_CAPACITORS, new CLClock() );
+        super( CLStrings.TAB_MULTIPLE_CAPACITORS );
         
-        model = new CLModel( getClock() );
+        model = new CLModel( getCLClock() );
         
         canvas = new MultipleCapacitorsCanvas( model, dev );
         setSimulationPanel( canvas );
