@@ -1,3 +1,5 @@
+9/23/10 modulate transparency of current indicator proportional to dV/dt, fade out when dV/dt=0
+9/23/10 hide clock control panel, this sim contains no animations that should be pausable
 9/23/10 make sim clock accessible to model
 9/23/10 fix Add/Remove Wires button layout so that it doesn't overlap current indicator
 9/23/10 create current indicator node, place on canvas, not wired up
